--- a/package.json
+++ b/package.json
@@ -85,5 +85,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "monet": "^0.9.2",
+    "ramda": "^0.27.1"
   }
 }
