--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "commitizen": "^4.2.3",
     "css-loader": "^5.1.1",
     "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.21.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "faker": "^5.5.3",
+    "fluture": "^14.0.0",
     "monet": "^0.9.2",
     "ramda": "^0.27.1"
   }
